# stonks-terminal

./: Cargo.toml  README.md  foo.txt
src/: app.rs  banner.rs  config.rs  main.rs  network.rs  session.rs  stonks_error.rs  store.rs  utils.rs
src/clients/: etrade.rs  etrade_json_structs.rs  etrade_xml_structs.rs  mod.rs
src/ui/: event.rs  key.rs  mod.rs  util.rs
src/ui/handlers/: account_list.rs  common_key_events.rs  dialog.rs  empty.rs  home.rs  input.rs  major_idices.rs  mod.rs  notification.rs  order_form.rs  portfolio.rs  search_results.rs  ticker_detail.rs  watch_list.rs
