[package]
name = "stonks-terminal"
version = "0.1.0"
authors = ["scott-newcomer <snewcomer24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
tui = { version = "0.14.0", features = ["crossterm"], default-features = false }
clap = "2.33.3"
dirs = "3.0.1"
oauth = { version="0.5", package = "oauth1-request" }
oauth-credentials = { version = "0.3", features = ["serde"] }
chrono = "0.4"
chrono-tz = "0.5"
secstr = { version = "0.4", features = ["serde", "libsodium-sys" ] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_urlencoded = "0.7"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
anyhow = "1.0.40"
derive_builder = "0.9.0"
log = "0.4.14"
unicode-width = "0.1.5"
env_logger = "0.8.3"

